name:                set-wakeup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgf-dma/set-wakeup#readme
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2017 sgf
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
                        Sgf.Development.Shake.Command
  ghc-options:          -Wall
  build-depends:          base
                        , mtl
                        , containers
                        , optparse-applicative
                        , ini
                        , text
                        , attoparsec
                        , shake
                        , foldl
                        , filepath
                        , directory
  default-language:     Haskell2010

executable set-wakeup-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , set-wakeup
  default-language:    Haskell2010

test-suite set-wakeup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , set-wakeup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/set-wakeup
